objects/TW1_RDO_LogBook__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Acao_Almoco__c</fullName>
        <label>Ação Almoço</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Acumulado__c</fullName>
        <formula>TW1_Infinite__c + TW1_Platinum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acumulado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Area__c</fullName>
        <label>Área</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>Cal</fullName>
                </value>
                <value>
                    <fullName>Clube</fullName>
                </value>
                <value>
                    <fullName>Concierge</fullName>
                </value>
                <value>
                    <fullName>Fraldário</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Assunto__c</fullName>
        <label>Assunto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Conservação</fullName>
                </value>
                <value>
                    <fullName>Lojas em obra e restaurantes</fullName>
                </value>
                <value>
                    <fullName>Mall e mídia</fullName>
                </value>
                <value>
                    <fullName>Manutenção/Arquitetura</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Ocorrências</fullName>
                </value>
                <value>
                    <fullName>Portarias</fullName>
                </value>
                <value>
                    <fullName>Primeiros socorros</fullName>
                </value>
                <value>
                    <fullName>Segurança</fullName>
                </value>
                <value>
                    <fullName>TI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Clube__c</fullName>
        <label>Clube</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Data__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Descricao__c</fullName>
        <label>Descrição</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Dia_da_Semana__c</fullName>
        <label>Dia da Semana</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Segunda</fullName>
                </value>
                <value>
                    <fullName>Terça</fullName>
                </value>
                <value>
                    <fullName>Quarta</fullName>
                </value>
                <value>
                    <fullName>Quinta</fullName>
                </value>
                <value>
                    <fullName>Sexta</fullName>
                </value>
                <value>
                    <fullName>Sábado</fullName>
                </value>
                <value>
                    <fullName>Domingo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Gratuidade_Clientes__c</fullName>
        <label>Gratuidade Clientes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Infinite__c</fullName>
        <label>Infinite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Observacoes__c</fullName>
        <label>Observações</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Platinum__c</fullName>
        <label>Platinum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Quantidade_Estacionamento__c</fullName>
        <label>Quantidade Estacionamento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Quantidade__c</fullName>
        <label>Quantidade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Responsavel_Turno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsável Turno</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Atendente</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Relat_rios_Di_rios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Relatórios Diários</relationshipLabel>
        <relationshipName>Relat_rios_Di_rios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abonos</fullName>
                </value>
                <value>
                    <fullName>Fluxo de clientes</fullName>
                </value>
                <value>
                    <fullName>Fluxo do estacionamento</fullName>
                </value>
                <value>
                    <fullName>Informações</fullName>
                </value>
                <value>
                    <fullName>LogBook</fullName>
                </value>
                <value>
                    <fullName>Promoção visa</fullName>
                </value>
                <value>
                    <fullName>RDO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Relatório Diário</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TW1_Shopping__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>RDO</fullName>
        <columns>NAME</columns>
        <columns>TW1_Acao_Almoco__c</columns>
        <columns>TW1_Acumulado__c</columns>
        <columns>TW1_Clube__c</columns>
        <columns>TW1_Infinite__c</columns>
        <columns>TW1_Platinum__c</columns>
        <columns>TW1_Quantidade__c</columns>
        <columns>TW1_Quantidade_Estacionamento__c</columns>
        <columns>TW1_Shopping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TW1_Tipo__c</field>
            <operation>equals</operation>
            <value>RDO</value>
        </filters>
        <label>RDO</label>
    </listViews>
    <listViews>
        <fullName>TW1_LogBook</fullName>
        <columns>NAME</columns>
        <columns>TW1_Data__c</columns>
        <columns>TW1_Dia_da_Semana__c</columns>
        <columns>TW1_Responsavel_Turno__c</columns>
        <columns>TW1_Area__c</columns>
        <columns>TW1_Descricao__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TW1_Tipo__c</field>
            <operation>equals</operation>
            <value>LogBook</value>
        </filters>
        <label>LogBook</label>
    </listViews>
    <nameField>
        <displayFormat>RD-{0000000}</displayFormat>
        <label>Código do Relatório Diário</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relatórios Diários</pluralLabel>
    <recordTypes>
        <fullName>Abonos</fullName>
        <active>false</active>
        <label>Abonos</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fluxo_de_clientes</fullName>
        <active>false</active>
        <label>Fluxo de clientes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fluxo_do_estacionamento</fullName>
        <active>false</active>
        <label>Fluxo do estacionamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>Informacoes</fullName>
        <active>false</active>
        <label>Informações</label>
    </recordTypes>
    <recordTypes>
        <fullName>LogBook</fullName>
        <active>true</active>
        <label>LogBook</label>
    </recordTypes>
    <recordTypes>
        <fullName>Promocao_visa</fullName>
        <active>false</active>
        <label>Promoção visa</label>
    </recordTypes>
    <recordTypes>
        <fullName>RDO</fullName>
        <active>true</active>
        <label>RDO</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>